# tomlcheck

./: .gitignore  .travis.yml  README.rst  pyproject.toml
.github/: dependabot.yml
tests/: test_tomlcheck.py
tomlcheck/: __init__.py  main.py  run.py
