[tool.poetry]
name = "tomlcheck"
version = "0.2.2"
description = "A simple toml syntax checker"
authors = ["Arijit Basu <sayanarijit@gmail.com>"]
license = "MIT"
classifiers = [
	"Topic :: Software Development",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
]
homepage = "http://github.com/sayanarijit/tomlcheck"
repository = "http://github.com/sayanarijit/tomlcheck"
keywords = ["toml", "toml-validation", "pre-commit", "pre-commit-hooks"]
packages = [
	{ include = "tomlcheck" },
]
readme = "README.rst"

[tool.poetry.scripts]
tomlcheck = "tomlcheck.run:run"

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
isort = "*"
mypy = "*"
black = "^19.10b0"
flake8 = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
